--- a/apis.yml
+++ b/apis.yml
@@ -1,34 +1,43 @@
 aid: acronis
-name: Acronis
-description: >-
-  Welcome to our ecosystem of software vendors, developers, service providers
-  and system integrators. Here, we build partnerships and integrations, share
-  ideas and best practices, to achieve better business results together. 
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2025-02-17'
-modified: '2025-02-17'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/acronis/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: acronis:acronis
     name: Acronis
+    tags:
+      - API
+    humanURL: ' https://developer.acronis.com/en-us/'
+    properties:
+      - url: ' https://developer.acronis.com/en-us/'
+        type: Documentation
     description: >-
       Welcome to our ecosystem of software vendors, developers, service
       providers and system integrators. Here, we build partnerships and
       integrations, share ideas and best practices, to achieve better business
       results together. 
-    humanURL: ' https://developer.acronis.com/en-us/'
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: ' https://developer.acronis.com/en-us/'
+name: Acronis
+tags:
+  - Data Protection
+  - Endpoint Management
+  - Cybersecurity
+type: Index
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2025-02-17'
+modified: '2025-02-19'
+position: Consumer
+description: >-
+  Acronis is a leading provider of cyber protection solutions that deliver
+  innovative technology to protect data, applications, and systems from the
+  ever-evolving threats of today's digital world. They offer a comprehensive
+  suite of products, including backup and disaster recovery solutions, file sync
+  and share services, and anti-malware protection. With a focus on combining
+  data protection and cybersecurity, Acronis helps businesses and individuals
+  safeguard their critical information and ensure business continuity in the
+  face of cyberattacks, natural disasters, and human error. Their cutting-edge
+  technology and user-friendly interface make it easy for customers to securely
+  manage and protect their data across a variety of platforms and devices.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
